Banner Frontend and Backend Problem Fixing

--- a/public/website/assets/css/style.css
+++ b/public/website/assets/css/style.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
-/** 
-* 
+/**
+*
 * -----------------------------------------------------------------------------
 *
 * Template : Braintech - Technology & IT Solutions HTML Template
 * Author : rs-theme
-* Author URI : http://www.rstheme.com/ 
+* Author URI : http://www.rstheme.com/
 *
 * -----------------------------------------------------------------------------
-* 
+*
 **//* TABLE OF CONTENT
 ---------------------------------------------------------
     01. General CSS
@@ -18,7 +18,7 @@
     05. About Section CSS
     06. Banner Section CSS
     07. Breadcrumbs Section CSS
-    08. Slider Section CSS    
+    08. Slider Section CSS
     09. Video Section CSS
     10. Faq Section CSS
     11. Counter Section CSS
@@ -4081,14 +4081,14 @@ body .search-modal .close:hover {
   margin-right: 0;
 }
 .rs-slider.style1 .slider-content.slide1 {
-  background: url(../images/slider/slider-1-1.jpg);
+  /* background: url(../images/slider/slider-1-1.jpg); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   padding: 260px 0 270px;
 }
 .rs-slider.style1 .slider-content.slide2 {
-  background: url(../images/slider/slider-2.jpg);
+  /* background: url(../images/slider/slider-2.jpg); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
